[gd_scene load_steps=16 format=3 uid="uid://b1if5acbehiib"]

[ext_resource type="Script" uid="uid://cy22rysuoir7f" path="res://scripts/startrunmenu.gd" id="1_bwlxp"]
[ext_resource type="PackedScene" uid="uid://dopi38qw7h67h" path="res://scenes/shapes/Diamond.tscn" id="2_m7h72"]

[sub_resource type="Animation" id="Animation_elhxr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Diamond:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Diamond:fill")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Menu:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hyfwm"]
resource_name = "menu_show"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Diamond:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.225313, 1),
"update": 0,
"values": [0, 600]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Diamond:fill")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1.2),
"transitions": PackedFloat32Array(0.278238, 1),
"update": 0,
"values": [1.0, 0.3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Menu:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h0mgd"]
_data = {
&"RESET": SubResource("Animation_elhxr"),
&"menu_show": SubResource("Animation_hyfwm")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ubjcs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_arrat"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_duupb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jd2c5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jhjnr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4fiux"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2buer"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v1pwt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yfo8u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cdw87"]

[node name="StartRun" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwlxp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h0mgd")
}
autoplay = "menu_show"

[node name="Diamond" parent="." instance=ExtResource("2_m7h72")]
radius = 0.0

[node name="Menu" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="Label" type="Label" parent="Menu/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Micro"

[node name="Play" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.629675, 0.629675, 0.629675, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_ubjcs")
theme_override_styles/hover = SubResource("StyleBoxEmpty_arrat")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_duupb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jd2c5")
action_mode = 0
text = "Start Run"

[node name="Options" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.629675, 0.629675, 0.629675, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_jhjnr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4fiux")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2buer")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jd2c5")
action_mode = 0
text = "Options"

[node name="Quit" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.629675, 0.629675, 0.629675, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_v1pwt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yfo8u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cdw87")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jd2c5")
action_mode = 0
text = "Quit"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_finished"]
[connection signal="mouse_entered" from="Menu/VBoxContainer/Play" to="." method="_on_button_hover" binds= [&"Play"]]
[connection signal="pressed" from="Menu/VBoxContainer/Play" to="." method="_on_play"]
[connection signal="mouse_entered" from="Menu/VBoxContainer/Options" to="." method="_on_button_hover" binds= [&"Options"]]
[connection signal="pressed" from="Menu/VBoxContainer/Options" to="." method="_on_options"]
[connection signal="mouse_entered" from="Menu/VBoxContainer/Quit" to="." method="_on_button_hover" binds= [&"Quit"]]
[connection signal="pressed" from="Menu/VBoxContainer/Quit" to="." method="_on_quit"]
